--- a/cybersafe.css
+++ b/cybersafe.css
@@ -237,3 +237,13 @@ p {
     }
 }
 
+@media screen and (max-width: 767px) {
+    #myVideo {
+      visibility: hidden;
+      clear: both;
+      float: left;
+      margin: 10px auto 5px 20px;
+      width: 28%;
+      display: none;
+    }
+  }
